# datafusiontools

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
DataFusionTools/: __init__.py  __version__.py
Notebooks/: CaseStudy.ipynb  CaseStudy_SOM.ipynb  Slice 2D.ipynb  test_model_default.stix
Notebooks/Visualisation Tutorial/: old_Visualisation.ipynb
Notebooks/static/cpts_bro/: CPT000000064990.xml  CPT000000065083.xml  CPT000000065084.xml  CPT000000065090.xml  CPT000000065112.xml  CPT000000065170.xml  CPT000000065215.xml  CPT000000065223.xml  CPT000000092416.xml  CPT000000092421.xml  CPT000000092427.xml  CPT000000092432.xml  CPT000000092435.xml  CPT000000092442.xml  CPT000000092448.xml  CPT000000092455.xml  CPT000000092471.xml  CPT000000092477.xml  CPT000000092480.xml  CPT000000092489.xml  CPT000000092493.xml  CPT000000092496.xml  CPT000000092503.xml  CPT000000092508.xml  (+106 more)
docs/: requirements.txt
docs/notebooks/: AHN.ipynb  CaseStudy_Deltares.ipynb  Sensitivity.ipynb  test_model_IC.stix
docs/source/: DataFusionTools.d_series_parser.rst  DataFusionTools.interpolation.rst  DataFusionTools.machine_learning.rst  DataFusionTools.rst  DataFusionTools.sensitivity.rst  DataFusionTools.visualization.rst  conf.py  index.rst  refs.bib
docs/uml-diagrams/: Regression.uxf  curent_situation_interpolation.uxf  current_situation.uxf  machine_learing.uxf
tests/: test_datafusiontools.py  test_tutorial.py  utils.py  utils_plot.py
tests/test_input/: results.json
(+124 files in other folders)
