[metadata]
name = datafusiontools
version = attr: d_series_parser.__version__
author = attr: d_series_parser.__author__
description = Data fusion package
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: GPLv3
    Operating System :: OS Independent

packages =
    datafusiontools
include_package_data = True
python_requires >=3.9
zip_safe = no
install_requires =
    spatial_utils @ git+https://github.com/DataFusionTools/spatial_utils
    interpolation @ git+https://github.com/DataFusionTools/interpolation
    core @ git+https://github.com/DataFusionTools/core
    spatial_utils @ git+https://github.com/DataFusionTools/spatial_utils
    sensitivity @ git+https://github.com/DataFusionTools/sensitivity
	d_series_parser @ git+https://github.com/DataFusionTools/d_series_parser
	machine_learning @ git+https://github.com/DataFusionTools/machine_learning
	
[options.extras_require]
testing =
    pytest>=7.2
    pytest-cov>=4.0
    tox>=4.4
    mypy>=1.1
    libpysal>=4.8.0
docs =
    Sphinx==6.2.1
    sphinx-rtd-theme==1.2.2